--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: python
 python:
+  - "3.4"
   - "3.3"
   - "3.2"
   - "2.7"
@@ -7,8 +8,8 @@ python:
   - "pypy"
 
 install:
-  - if [[ $TRAVIS_PYTHON_VERSION != 'pypy' ]]; then pip install --use-mirrors dawg; fi
-  - pip install coverage pytest-cov coveralls --use-mirrors
+  - if [[ $TRAVIS_PYTHON_VERSION != 'pypy' ]]; then pip install dawg; fi
+  - pip install coverage pytest-cov coveralls
   - python setup.py install
 
 # command to run tests, e.g. python setup.py test
