Install dev dependencies

--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -34,6 +34,9 @@ jobs:
     - name: Install the module
       run: pip install -e .
 
+    - name: Install dev dependencies
+      run: pip install flake8 pytest pytest-cov coveralls
+
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
@@ -47,7 +50,6 @@ jobs:
 
     # - name: Upload coverage data to coveralls.io
     #   run: |
-    #     pip install coveralls
     #     coveralls --service=github
     #   env:
     #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
