--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -7,6 +7,7 @@ on:
     paths:
       - '**.py'
       - '.github/workflows/python-tests.yml'
+      - '.coveragerc'
       
   pull_request:
     branches:
@@ -14,6 +15,7 @@ on:
     paths:
       - '**.py'
       - '.github/workflows/python-tests.yml'
+      - '.coveragerc'
 
 jobs:
   test:
