--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -38,9 +38,9 @@ jobs:
 
     - name: Install dev dependencies
       run: pip install flake8 dawg2 pytest pytest-cov coveralls
-    
+
     - name: Install dawg2
-      if: ${{ matrix.python-version }} != "pypy3.10"
+      if: startsWith(${{ matrix.python-version }}, "pypy")
       run: pip install dawg2
 
     - name: Lint with flake8
