--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -5,14 +5,18 @@ on:
     branches:
       - master
     paths:
+      - 'pyproject.toml'
+      - 'poetry.lock'
       - '**.py'
       - '.github/workflows/python-tests.yml'
       - '.coveragerc'
-      
+
   pull_request:
     branches:
       - master
     paths:
+      - 'pyproject.toml'
+      - 'poetry.lock'
       - '**.py'
       - '.github/workflows/python-tests.yml'
       - '.coveragerc'
@@ -28,29 +32,32 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
+    - name: Install poetry
+      run: pipx install poetry
+
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
+        cache: "poetry"
+        cache-dependency-path: poetry.lock
 
-    - name: Install the module
-      run: pip install -e .
-
-    - name: Install dev dependencies
-      run: pip install flake8 dawg2 pytest pytest-cov coveralls
+    - name: Install dependencies
+      run: poetry install
 
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+        poetry run flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+        poetry run flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
 
     - name: Test with pytest
-      run: pytest --cov=./
+      run: poetry run pytest --cov=./
 
     - name: Upload coverage data to coveralls.io
       run: |
+        pip install coveralls
         coveralls --service=github
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
