--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,15 @@ flake8 = { version = "^6.1.0", python = "^3.8.1"}
 dawg2 = "^0.9.0"
 pytest = "^7.4.1"
 pytest-cov = "^4.1.0"
+ruff = "^0.0.287"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.ruff]
+line-length = 120
+select = ["E", "F", "UP"]
+ignore = ["UP015"]
+unfixable = ["F401"]
+target-version = "py38"
