--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,10 +30,19 @@ dawg2 = "^0.9.0"
 pytest = "^7.4.1"
 pytest-cov = "^4.1.0"
 ruff = "^0.0.287"
+black = "^23.9.0"
+isort = "^5.12.0"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.black]
+line-length = 120
+skip-string-normalization = true
+
+[tool.isort]
+profile = "black"
 
 [tool.ruff]
 line-length = 120
